backend/kubernetes/k8sDevelopment/ingressNginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:30036,http://frontend-service:8080,http://frontend-service:30036,http://localhost:8080,"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, OPTIONS, DELETE, PUT, PATCH"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization"
    nginx.ingress.kubernetes.io/websocket-services: "frontend-service,user-service,company-service,admin-service,chat-service,booking-service"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 8080
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: user-service
            port: 
              number: 3000
      - path: /api/company
        pathType: Prefix
        backend:
          service:
            name: company-service
            port: 
              number: 3001
      - path: /api/admin
        pathType: Prefix
        backend:
          service:
            name: admin-service
            port: 
              number: 3002
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: chat-service
            port: 
              number: 3004
      - path: /api/order
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port: 
              number: 3003
